--- a/Projects/project3_Detection/Project - Detection.ipynb
+++ b/Projects/project3_Detection/Project - Detection.ipynb
@@ -32,14 +32,14 @@
    "source": [
     "# Task\n",
     "\n",
-    "**TODO:** With the knowledge from the labs, implement **SSD** to predict bounding boxes on the training set.\n",
+    "**TODO:** Implement **SSD** to predict bounding boxes on the training set.\n",
     "\n",
     "**TODO:** Select a good metric to evaluate the models performance and argue why the metric give a good overview of the performance.\n",
     "\n",
     "**TODO:** Is it possible to reduce the number of bounding boxes? If yes, implement it and why it is a good solution.\n",
     "\n",
     "\n",
-    "**Question:** Explain in the report what you did and why. Show a pipeline of the code. "
+    "**Question:** Explain in the report what you did and why. Present a pipeline of the code. "
    ]
   },
   {
@@ -193,22 +193,31 @@
     }
    ],
    "source": [
-    "# create own Dataset\n",
-    "coco_dataset = CocoDataset(\n",
-    "    root=cfg.training_img_dir,\n",
-    "    annotation=cfg.training_annotations,\n",
-    "    transforms=train_transform\n",
-    ")\n",
-    "\n",
     "# collate_fn needs for batch\n",
     "def collate_fn(batch):\n",
     "    return tuple(zip(*batch))\n",
     "\n",
-    "train_dataloader = torch.utils.data.DataLoader(coco_dataset,\n",
-    "                                          batch_size=cfg.BATCH_SIZE,\n",
-    "                                          shuffle=True,\n",
-    "                                          num_workers=cfg.NUM_WORKERS,\n",
-    "                                            collate_fn=collate_fn)"
+    "train_dataloader = torch.utils.data.DataLoader(\n",
+    "    CocoDataset(\n",
+    "        root=cfg.training_img_dir,\n",
+    "        annotation=cfg.training_annotations,\n",
+    "        transforms=train_transform\n",
+    "    ),\n",
+    "    batch_size=cfg.BATCH_SIZE,\n",
+    "    shuffle=True,\n",
+    "    num_workers=cfg.NUM_WORKERS,\n",
+    "    collate_fn=collate_fn)\n",
+    "\n",
+    "validation_dataloader = torch.utils.data.DataLoader(\n",
+    "    CocoDataset(\n",
+    "        root=cfg.validation_img_dir,\n",
+    "        annotation=cfg.validation_annotations,\n",
+    "        transforms=train_transform\n",
+    "    ),\n",
+    "    batch_size=cfg.BATCH_SIZE,\n",
+    "    shuffle=True,\n",
+    "    num_workers=cfg.NUM_WORKERS,\n",
+    "    collate_fn=collate_fn)"
    ]
   },
   {
@@ -242,7 +251,7 @@
     }
    ],
    "source": [
-    "cats = coco_dataset.coco.loadCats(coco_dataset.coco.getCatIds())\n",
+    "cats = train_dataloader.dataset.coco.loadCats(coco_dataset.coco.getCatIds())\n",
     "\", \".join([cat['name'] for cat in cats])"
    ]
   },
