--- a/lab1_Backpropagation/Exercise_0101 - Numpy.ipynb
+++ b/lab1_Backpropagation/Exercise_0101 - Numpy.ipynb
@@ -2,16 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e34d270b-d19b-4912-b66c-36ec8cae0aa4",
+   "id": "vanilla-polyester",
    "metadata": {},
    "source": [
-    "<h1 style=\"font-size:40px;\"><center>Exercise I:<br> Backpropagation in Numpy\n",
-    "</center></h1>\n"
+    "<center><h1 style=\"font-size:40px;\">Exercise I:<br> Backpropagation in Numpy\n",
+    "</h1></center>\n",
+    "\n",
+    "---\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b865c658-9cb0-46dd-9e0d-bc47471d6338",
+   "id": "democratic-advertising",
    "metadata": {},
    "source": [
     "Welcome to the first lab for Deep Learning!\n",
@@ -33,7 +35,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "d7672fda-ee22-4cbd-83bd-3c310063de96",
+   "id": "limited-aspect",
    "metadata": {},
    "source": [
     "## Neuron\n",
@@ -46,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b599fd5-79c6-431a-8472-d34a846de1d6",
+   "id": "historical-revision",
    "metadata": {},
    "source": [
     "## MLP\n",
@@ -58,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5d82e0e-fd57-4055-811d-fd6cc1f08cfa",
+   "id": "destroyed-facility",
    "metadata": {},
    "source": [
     "## Imports"
@@ -67,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1f1551eb-d493-4094-b9f9-2d1dc26928df",
+   "id": "optimum-missile",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a1de8ca-28c9-4e07-bdb5-f94e78a2d8df",
+   "id": "organic-diploma",
    "metadata": {},
    "source": [
     "# Load dataset\n",
@@ -94,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b73a6cf8-9d92-4843-b3e3-56b1a70392d6",
+   "id": "sealed-noise",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a81f3c32-8473-4d08-8a28-1cf01b361de5",
+   "id": "velvet-painting",
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "062004ad-428d-4c9c-86a6-cb872e588593",
+   "id": "biological-bangkok",
    "metadata": {},
    "source": [
     "# Implement Neural network\n",
@@ -147,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96dd69e1-2f0b-4e02-ba7f-f5621e2579be",
+   "id": "british-voltage",
    "metadata": {},
    "source": [
     "## Predefined settings\n",
@@ -162,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b1d2e094-44b2-4645-b5fd-8dbb37e13622",
+   "id": "mathematical-benjamin",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccd9c7c9-4176-42e8-9b6d-ceae34254de6",
+   "id": "dressed-computer",
    "metadata": {},
    "source": [
     "## One-hot encoding\n",
@@ -185,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f32dfb79-4613-4a7d-b191-6b962188fb27",
+   "id": "meaning-porter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62102762-4b52-435b-87f7-dc595818e99d",
+   "id": "bacterial-connection",
    "metadata": {},
    "source": [
     "## Activation function\n",
@@ -228,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "577c9743-3dc7-4447-93b7-6407030fb59f",
+   "id": "cheap-passage",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "111b3a10-3ec1-4100-a4e0-6f1175a1842b",
+   "id": "invisible-project",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d33988cc-1c5a-49a2-932d-acceade682a7",
+   "id": "designing-wednesday",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +267,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c932073-4b86-41ff-8612-af1fb412dc3d",
+   "id": "automatic-excellence",
    "metadata": {},
    "source": [
     "To test the models. Run the following code and see if the plot is the same as the expected result."
@@ -274,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "76f22dc2-bc82-413c-85c9-d1f4a9574e17",
+   "id": "completed-hungary",
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad0da121-00da-4775-9c6b-fc3df30c795b",
+   "id": "stupid-resident",
    "metadata": {},
    "source": [
     "### Expected result - sigmoid and dsigmoid\n",
@@ -308,7 +310,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "222340bb-915c-42cd-b557-f5a35a48ebe7",
+   "id": "given-heater",
    "metadata": {},
    "source": [
     "### Test Softmax\n",
@@ -318,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d0c4e047-79e1-45ae-874d-f7609331b947",
+   "id": "caroline-explanation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31ca3d01-4364-4afd-af43-26968dfb5796",
+   "id": "matched-honolulu",
    "metadata": {},
    "source": [
     "## Loss function.\n",
@@ -345,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "d7e8a1b7-970b-4f05-91a9-1c9808dfce68",
+   "id": "loaded-territory",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +359,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f41c709b-5192-430f-82f0-eed743942684",
+   "id": "latin-highland",
    "metadata": {},
    "source": [
     "### Test nll\n",
@@ -367,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "de63badb-fa35-4c6b-9477-e47b8d9c5634",
+   "id": "banner-circulation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e2c378f-3a41-4a49-9761-701519b0433a",
+   "id": "collaborative-handbook",
    "metadata": {},
    "source": [
     "## Feedforward\n",
@@ -399,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8ac67022-8d63-4635-9c23-f34ba0cbe2c2",
+   "id": "contemporary-blackjack",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +418,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "580a5074-8477-486b-a2d9-66e04e84fe93",
+   "id": "southern-theme",
    "metadata": {},
    "source": [
     "## Init weights\n",
@@ -431,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "39d2b3f4-acd0-49d7-ba76-ff2ec80caf53",
+   "id": "legal-loading",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +445,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "360e9d0f-8af4-4c91-bf16-1e4b1fdfda48",
+   "id": "adolescent-hours",
    "metadata": {},
    "source": [
     "## Backpropagation\n",
@@ -459,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "db62f501-06eb-4b0c-95b5-4fb7b5daa758",
+   "id": "reverse-professor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +474,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42c4ba5f-193e-40f1-9682-1ad73299310d",
+   "id": "fatty-extension",
    "metadata": {},
    "source": [
     "## SGD\n",
@@ -484,7 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "90387dfe-aff8-40cf-b945-40693752b94c",
+   "id": "marked-meaning",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +501,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50e0c9a3-0f58-4749-aad0-d15ef05967b4",
+   "id": "primary-empty",
    "metadata": {
     "tags": []
    },
@@ -511,7 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "0ff94eff-04cf-4f3a-b47c-a1663b27d4d0",
+   "id": "typical-facial",
    "metadata": {
     "tags": []
    },
@@ -523,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa8948e4-361a-46a8-bd65-c717e7b1a367",
+   "id": "empirical-center",
    "metadata": {},
    "source": [
     "## Predict\n",
@@ -533,7 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "ea4124d2-4167-4842-bb68-b0dff2be6b4e",
+   "id": "registered-thailand",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +545,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38a3b432-be0f-4acf-b8fd-bbb68b82f4ee",
+   "id": "precious-jersey",
    "metadata": {},
    "source": [
     "## Metric\n",
@@ -553,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "474f869b-b0d0-4d65-b60e-d0677862c635",
+   "id": "capable-morrison",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +565,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f39b5599-d1df-43e5-aa31-23576a242227",
+   "id": "studied-pierce",
    "metadata": {},
    "source": [
     "## Neural network\n",
@@ -573,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "2df78b06-7086-48e9-94d3-a91e67f534d1",
+   "id": "micro-reference",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +613,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e254de42-d2e6-430e-8d51-cb538aaff6a5",
+   "id": "scheduled-triple",
    "metadata": {},
    "source": [
     "## Training\n",
@@ -621,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "eb9958de-ef0d-4fbf-aafd-0e337044d7ed",
+   "id": "desirable-monitor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "7d66a2de-bf0f-4bd3-bcea-b0a24c88d17d",
+   "id": "unavailable-customer",
    "metadata": {},
    "outputs": [
     {
@@ -669,7 +671,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c19ca58-f210-413b-a2a2-dca3b045b524",
+   "id": "boring-training",
    "metadata": {},
    "source": [
     "## Visualize the result\n",
@@ -679,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "eab569ae-4a13-4846-924f-0b7be00480e1",
+   "id": "interracial-vegetarian",
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +712,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20129f5d-1e28-4a48-9089-bc0717038bc7",
+   "id": "surface-diploma",
    "metadata": {},
    "source": [
     "## Expected result\n",
@@ -719,7 +721,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b97f6bbe-569a-4760-b3f8-0f685c701838",
+   "id": "descending-importance",
    "metadata": {},
    "source": [
     "**Question:** Can the result be improved? \\\n",
@@ -729,7 +731,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "651b6fc7-10f6-4c01-b243-dfc73df2e573",
+   "id": "elect-paragraph",
    "metadata": {},
    "source": [
     "## End\n",
@@ -753,7 +755,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
