--- a/lab1_Backpropagation/Exercise_0102 - PyTorch.ipynb
+++ b/lab1_Backpropagation/Exercise_0102 - PyTorch.ipynb
@@ -6,8 +6,10 @@
     "toc-hr-collapsed": true
    },
    "source": [
-    "<h1 style=\"font-size:40px;\"><center>Exercise I:<br> Backpropagation\n",
-    "</center></h1>"
+    "<center><h1 style=\"font-size:40px;\">Exercise I:<br> Backpropagation\n",
+    "</h1></center>\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -585,7 +587,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.9.6"
   },
   "toc-autonumbering": true,
   "toc-showcode": false,
