--- a/lab2_MLP_Classification/Exercise_0204 - Classification.ipynb
+++ b/lab2_MLP_Classification/Exercise_0204 - Classification.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1 style=\"font-size:40px;\"><center>Exercise IV: Classification\n",
-    "    \n",
-    "</center></h1>"
+    "<center><h1 style=\"font-size:40px;\">Exercise II: Classification</h1></center>\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -338,7 +338,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
