--- a/lab4_Segmentation/Segmentation.ipynb
+++ b/lab4_Segmentation/Segmentation.ipynb
@@ -4,11 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "\n",
-    "<center><h1 style=\"font-size:40px;\">Exercise IV<br>Image Segmentation using CNNs</h1></center>\n",
-    "\n",
-    "---"
+    "<center><h1 style=\"font-size:40px;\">Exercise IV<br>Image Segmentation using CNNs</h1></center>"
    ]
   },
   {
