--- a/Projects/project2_GAN/Project - GAN.ipynb
+++ b/Projects/project2_GAN/Project - GAN.ipynb
@@ -12,7 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This project will develop an **Generative adversarial network (GAN)**. The task is to have a two networks: generator and discriminator.\n",
+    "This project will develop an **Generative adversarial network (GAN)**. The task is to use an unsupervised approach to generate realistic images, To achieve this GAN uses two networks: generator and discriminator.\n",
     "\n",
     "The generator tries to fool the discriminator and create realistic images. The discriminators job is to figure out if the image is real or fake. A GAN network is very suitable when there is no clear pattern or we want to \"create\" new data samples. A good generator can create new and realistic images from images.\n",
     "\n",
